# fairsoft-config

./: CMakeLists.txt  fairsoft-config
